--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,18 @@
     "node": true
   },
   "extends": [
-    "standard-with-typescript",
+    "airbnb",
+    "airbnb-typescript",
+    "airbnb/hooks",
+    "next/core-web-vitals",
+    "prettier",
     "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["react"],
   "rules": {
