--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,4 @@
 {
-  "arrowParens": "always",
-  "printWidth": 80,
-  "singleQuote": false,
-  "jsxSingleQuote": false,
-  "semi": true,
-  "trailingComma": "all",
-  "tabWidth": 2
+  "singleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
