--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commit": "gitmoji -c"
   },
   "dependencies": {
+    "daisyui": "^3.9.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
