--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,7 @@
     "airbnb-typescript",
     "airbnb/hooks",
     "next/core-web-vitals",
-    "prettier",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended"
+    "plugin:react/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -21,11 +19,7 @@
   "plugins": ["react"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
+    "linebreak-style" : "off",
+    "@typescript-eslint/indent": "off"
   }
 }
