--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
   "plugins": ["react"],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "no-console": "off",
+    "react-hooks/exhaustive-deps": "off",
     "prettier/prettier": [
       "error",
       {
