--- a/package.json
+++ b/package.json
@@ -8,25 +8,24 @@
     "start": "next start",
     "lint": "next lint",
     "commit": "gitmoji -c",
-		"pre-commit": "lint-staged",
-		"prepare": "node prepare.mjs"
+    "pre-commit": "lint-staged",
+    "prepare": "node prepare.mjs"
   },
   "dependencies": {
     "daisyui": "^3.9.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "socket.io-client": "^4.7.2"
   },
-	"husky": {
-		"hooks": {
-			"pre-commit": "yarn lint",
-			"pre-push": "yarn test"
-		}
-	},
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn test"
+    }
+  },
   "devDependencies": {
-		"husky": "^8.0.3",
-		"lint-staged": "^14.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -47,6 +46,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gitmoji-cli": "^8.5.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
